changing path of the profile pic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="15">
     <tr>
-      <td><a target="_blank" href="https://www.facebook.com/ron.yalensky"><img src="Images\rons_profile.jpg" alt="ron's profile pic" width="200" height="200"></a></td>
+      <td><a target="_blank" href="https://www.facebook.com/ron.yalensky"><img src="Images/rons_profile.jpg" alt="ron's profile pic" width="200" height="200"></a></td>
       <td>
       <h1>Ron Yalensky</h1>
       <p><em>Junior <strong>Software</strong> Engineer </em></p>
